Fixed Images On Committee Page (Mobile View)
Images were getting distorted in mobile view.

--- a/test2.css
+++ b/test2.css
@@ -87,3 +87,6 @@ body {
 	border-radius: 20px !important;
 }
 
+.card-img-top{
+	object-fit: cover;
+}
